# encrust

./: CMakeLists.txt  LICENSE.txt  README.md  encrust.pro  encrust.sh
include/: CFrameEncrustor.h  CImageBuilder.h  CSettingsReader.h  CVideoGrabber.h  CVideoManager.h  EncrustDefines.h
src/: CFrameEncrustor.cpp  CImageBuilder.cpp  CSettingsReader.cpp  CVideoGrabber.cpp  CVideoManager.cpp  main.cpp
